fix css to dark mode

--- a/src/Components/FutureWorks.css
+++ b/src/Components/FutureWorks.css
@@ -14,20 +14,6 @@ body.active-modal {
   position: fixed;
 }
 
-
-
-.dark-mode .futureWorks__modal{
-  width: 500px;
-  height: 250px;
-  right: 0;
-  bottom: 0;
-  top: 70%;
-  left: 70%;
-  transform: translate(-70%, -70%);
-  position: fixed;
-  background-color: blue;
-}
-
 .futureWorks__modal {
   z-index: 9999;
   border: 2px solid red;
